# marble_solitaire

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  gtkmarble.c  gtkmarble.h  gtkmarblegrid.c  gtkmarblegrid.h  marble.h  marble_solitaire.c  marble_solitaire_app.c  marble_solitaire_app.h  marble_solitaire_app_window.c
src/: Makefile.am  marble.c  marble.h  marble_grid.c  marble_grid.h  marble_solitaire.c  marble_solitaire.gresource.xml  marble_solitaire_app_window.c  marble_solitaire_app_window.h
