bin_PROGRAMS = marble_solitaire

marble_solitaire_CFLAGS = @GTK_CFLAGS@ -std=c99 -Wall -Werror -pedantic
marble_solitaire_LDADD = @GTK_LIBS@

marble_solitaire_SOURCES = marble.c \
                           marble_grid.c \
                           marble_grid.h \
                           marble_solitaire_app.c \
                           marble_solitaire_app.h \
                           marble_solitaire_app_window.c \
                           marble_solitaire_app_window.h \
                           marble_solitaire.c
